# bazel-containers-hasher-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
cmd/api/: BUILD.bazel  main.go
